--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "furniture-app",
   "version": "0.1.0",
   "private": true,
+  "homepage":"./",
   "dependencies": {
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-slick": "^0.23.2",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start && npm run watch:sass",
